<resources>
    <string name="app_name">Parthenopeddit</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="welcome_it">Benvenuto.</string>
    <string name="auth_help_it">Effettua il login con le tue credenziali Esse3.</string>
    <string name="shared_preferences_auth_file">it.uniparthenope.parthenopeddit.auth_file</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="errore_non_specificato">Errore non specificato</string>
    <string name="logout">Logout</string>
    <string name="login_error">Email o password errate.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="new_group_it">Crea un nuovo gruppo</string>
    <string name="new_post_it">Crea un nuovo post</string>
    <string name="new_review_it">Crea nuova recensione</string>
    <string name="select_group_post_it">Seleziona il gruppo in cui pubblicare</string>
    <string name="write_post_it">Scrivi il post</string>
    <string name="publish_it">Pubblica</string>
    <string name="create_it">Crea</string>
    <string name="write_group_name_it">Scrivi il nome del nuovo gruppo</string>
    <string name="write_group_users_it">Inserisci l\'username degli utenti da invitare</string>
    <string name="title_profile_it">Profilo</string>
    <string name="title_messages_it">Messaggi</string>

    <string name="hint_group_name_it">Nome gruppo</string>
    <string name="username_user">Username</string>

    <string name="member_removed">Hai cacciato %1$s dal gruppo</string>
    <string name="invite_removed">Hai annullato l\' invito di %1$s al gruppo</string>

    <!--PROFILE FRAGMENT-->
    <string name="user_activity_text_it">Visualizza le tue attività</string>
    <string name="darkmode">Dark mode</string>
    <string name="about_it">Informazioni</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_search">SearchActivity</string>

    <!--TEMP-->
    <string name="random_image_url">https://picsum.photos/%1$d</string>
    <string name="footer_content">this example is using Glide &amp; picsum-photos.\ndetailed license has been uploaded on github.</string>
    <string name="click">Well done! %1$s clicked.</string>
    <string name="remove">Well done! %1$s successfully removed.</string>
    <string name="header">%1$s completely removed!</string>
    <string name="title_activity_user_boards">UserBoardsActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--FIREBASE-->
    <string name="msg_token_fmt"><![CDATA[test -> %s]]></string>
    <string name="testing_notification_channel_id">TESTING_CHANNEL</string>
    <string name="userchat_notification_channel_id">USERCHAT_CHANNEL</string>

</resources>
