<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.uniparthenope.parthenopeddit.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="it.uniparthenope.parthenopeddit.android.ui.profile.ProfileFragment"
        android:label="@string/title_profile_it"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="it.uniparthenope.parthenopeddit.android.ui.messages.MessagesFragment"
        android:label="@string/title_messages_it"
        tools:layout="@layout/fragment_messages" />
</navigation>
